--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,32 @@ astroid==2.3.3
 autopep8==1.4.4
 beautifulsoup4==4.8.1
 bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 colorama==0.4.3
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.0
+django-heroku==0.3.1
 djangorestframework==3.10.3
+gunicorn==20.0.4
+idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.3
 logilab-common==1.5.2
 mccabe==0.6.1
 pep8==1.7.1
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
 pycodestyle==2.5.0
 pylint==2.4.4
 pylint-plugin-utils==0.6
 pytz==2019.3
+requests==2.22.0
 six==1.13.0
 soupsieve==1.9.5
 sqlparse==0.3.0
+static3==0.7.0
+urllib3==1.25.7
+whitenoise==5.0.1
 wrapt==1.11.2
